--- a/bono-app-challenge-project-website/index.html
+++ b/bono-app-challenge-project-website/index.html
@@ -34,7 +34,7 @@
             <i class="fas fa-phone"> (+31) 021-800-8244</i>
           </div>
           <div>
-            <a href="https:/twitter.com" target="_blank">
+            <a href="https://twitter.com" target="_blank">
               <i class="fa-brands fa-twitter"></i>
             </a>
           </div>
